--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"version": "1.1.0",
 	"description": "Personal portfolio template built using Reactjs",
 	"author": {
-		"name": "Tharindu N. Madhusanka",
-		"email": "mail@tharindu.dev",
-		"url": "https://tharindu.dev"
+		"name": "Samet AKBAL",
+		"email": "sametakbal7@gmail.com",
+		"url": "https://sametakbal.dev"
 	},
 	"license": "MIT",
 	"private": true,
@@ -18,10 +18,12 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"i18next": "^23.7.16",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-ga4": "^2.1.0",
 		"react-helmet": "^6.1.0",
+		"react-i18next": "^14.0.0",
 		"react-router-dom": "^6.11.1",
 		"react-scripts": "5.0.1",
 		"styled-components": "^5.3.10",
